# capstone

./: .gitignore  DOCKER_SETUP.md  Makefile  README.md  dev.Dockerfile  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
app/: config.py  dependencies.py  exceptions.py  log.py  main.py  utils.py
app/api/: debug.py  reminders.py  root.py  users.py
app/db/: async_abstract_pool.py  async_pgsql_pool.py  transaction_context.py
app/entities/: __init__.py  domain_entity.py  notification.py  reminder.py  user.py
app/middlewares/: __init__.py  logging_middleware.py
app/models/: __init__.py  base.py  groups.py  notification_recipients.py  reminder.py  users.py
app/repos/: __init__.py  notifications_pgsql_repo.py  reminder_pgsql_repo.py  user_pgsql_repo.py
app/schemas/: app_schemas.py  base_schemas.py  reminder_schemas.py  user_schemas.py
app/services/: __init__.py  app_service.py  notification_providers.py  notifications_service.py  reminder_service.py  user_service.py
app/structs/: app_structs.py  auth_structs.py  aws_structs.py  error_structs.py  pagination_structs.py
frontend/: .dockerignore  BLANK_PAGE_FIX.md  DARK_MODE_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  SETUP_GUIDE.md  TAILWIND_V4_FIX.md  check-setup.sh  package-lock.json  package.json  start.sh
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  reminders.ts
frontend/src/components/: LoadingSpinner.tsx  Navbar.tsx  ProtectedRoute.tsx  ReminderCard.tsx  ReminderModal.tsx
frontend/src/context/: store.ts
frontend/src/hooks/: useDarkMode.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 0e3322cc2f37_notifications.py  16b7e698131d_users.py  23c41c3287ec_reminder.py  2d7a78c32a14_updated_by_created_by_added_to_reminder.py  485b8c902cdd_update_notification_timestamps_to_.py  f82bb466a060_add_creator_email_to_notifications.py
